# compare_structures

./: .gitignore  GIT_SETUP.md  INSTALL.md  QUICK_START.md  README.md
compare_structures_js/: compare_structures_js.js  compare_structures_js_usage.md  package.json
compare_structures_py/: MANIFEST.in  README.md  __init__.py  compare_structures.py  compare_structures_usage.md  pyproject.toml  requirements.txt  setup.py  test_compare_structures_scenarios.py
