[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "compare-structures"
version = "1.0.0"
description = "增强版结构对比库 - 用于深度对比两个数据结构（字典/列表）"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "崔浩浩"}
]
keywords = ["compare", "diff", "structure", "dictionary", "list", "comparison"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "logzero>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/cuihaohao1220/compare_structures"
Repository = "https://github.com/cuihaohao1220/compare_structures"
Issues = "https://github.com/cuihaohao1220/compare_structures/issues"

[tool.setuptools]
packages = ["compare_structures_py"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

